api: Page test